--- a/slr-web/src/main/resources/static/css/signin.css
+++ b/slr-web/src/main/resources/static/css/signin.css
@@ -13,30 +13,32 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-signin,
+.form-register {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
 }
+
 .form-signin .checkbox {
   font-weight: 400;
 }
-.form-signin .form-control {
+.form-signin,
+.form-register
+.form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+.form-signin,
+.form-register
+.form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
+
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
@@ -46,4 +48,14 @@ body {
 
 .form-signin .register {
   margin-top: 30px;
+}
+
+
+.form-register .form-control {
+  margin-bottom: 10px;
+}
+
+.form-register .form-border {
+  outline: 3px solid deepskyblue;
+  padding: 30px;
 }
