--- a/slr-web/src/main/resources/templates/register.html
+++ b/slr-web/src/main/resources/templates/register.html
@@ -11,23 +11,18 @@
 </head>
 
 <body class="text-center">
-<form class="form-signin">
+<form class="form-register">
     <img class="mb-4" th:src="@{/static/assets/bootstrap-solid.svg}" alt="Brand" width="72" height="72" />
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername" class="sr-only">User Name</label>
-    <input type="text" id="inputUsername" class="form-control" placeholder="User Name" required autofocus />
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-        <label>
-            <input type="checkbox" value="remember-me"> Remember me
-        </label>
+    <div class="container form-border">
+        <h1 class="h3 mb-3 font-weight-normal">Registration Form</h1>
+        <label for="userName" class="sr-only">User Name</label>
+        <input type="text" id="userName" class="form-control" placeholder="User Name" required autofocus />
+        <label for="name" class="sr-only">Name</label>
+        <input type="text" id="name" class="form-control" placeholder="Name" required />
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" id="password" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id="btRegister" >Register</button>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit" id="btLogin" >Sign in</button>
-    <div class="register" id="register">
-        <a href="/register/display" class="btn-lg active" role="button" aria-pressed="true">Register</a>
-    </div>
-    <p class="mt-5 mb-3 text-muted">&copy; 2019-2020</p>
 </form>
 
 </body>
